--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
+        <link rel="icon" href="img/fav-iconH.png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>RAMIREZ - Resume / CV / </title>
+        <title>HAZZARD - Resume / CV / </title>
 
         <!-- Icon css link -->
         <link href="vendors/material-icon/css/materialdesignicons.min.css" rel="stylesheet">
@@ -65,9 +65,7 @@
                             <li class="active"><a href="#about">ABOUT ME </a></li>
                             <li><a href="#skill">Skill</a></li>
                             <li><a href="#education">Education</a></li>
-                            <li><a href="#service">SERVICES</a></li>
                             <li><a href="#portfolio">PORTFOLIO</a></li>
-                            <li><a href="#news">News</a></li>
                             <li><a href="#contact">CONTACT</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
@@ -141,7 +139,7 @@
                                     <h4>Java</h4>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter"></span>%</div>
+                                            <div class="progress_parcent"><span class="counter"></span>85%</div>
                                         </div>
                                     </div>
                                 </div>
@@ -209,80 +207,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="education_area pad" id="education">
-                    <div class="main_title">
-                        <h2>Education</h2>
-                    </div>
-                    <div class="education_inner_area">
-                        <div class="education_item wow fadeInUp animated" data-line="H">
-                            <h6>2012-2016</h6>
-                            <a href="#"><h4>High School</h4></a>
-                            <h5>Fairfield College Preparatory School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-                        </div>
-                        <div class="education_item wow fadeInUp animated" data-line="C">
-                            <h6>2016-2017</h6>
-                            <a href="#"><h4>College</h4></a>
-                            <h5>Plymouth State University</h5>
-                            <p>While attending Plymouth State I studied computer science and was also invloved with both the Investment Club and Marketing Club (MAPS).</p>
-                        </div>
-                        <div class="education_item wow fadeInUp animated" data-line="C">
-                            <h6>2005-2007</h6>
-                            <a href="#"><h4>College</h4></a>
-                            <h5>Univerisy of Vermont</h5>
-                            <p>Currently at the University of Vermont I am involved with the CS Crew and the Entrepreneurship club.</p>
-                        </div>
-                    </div>
-                </section>
-                <section class="service_area" id="service">
-                    <div class="main_title">
-                        <h2>SERVICES</h2>
-                    </div>
-                    <div class="service_inner row">
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-wordpress" aria-hidden="true"></i>
-                                <a href="#"><h4>Wordpress Development</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-paint-brush" aria-hidden="true"></i>
-                                <a href="#"><h4>Creative Design</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-mobile" aria-hidden="true"></i>
-                                <a href="#"><h4>Mobile Apps Development</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-maxcdn" aria-hidden="true"></i>
-                                <a href="#"><h4>Social Media Marketing</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-camera" aria-hidden="true"></i>
-                                <a href="#"><h4>Professional Photography</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service_item wow fadeIn animated">
-                                <i class="fa fa-laptop" aria-hidden="true"></i>
-                                <a href="#"><h4>Website Development</h4></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elits, sed do mod, tempor ets incididunt ut labore et dolore magna aliqua. Ut enim adtiesm minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </div>
                     </div>
@@ -370,77 +294,9 @@
                         </div>
                     </div>
                 </section>
-                <section class="news_area pad" id="news">
-                    <div class="main_title">
-                        <h2>News</h2>
-                    </div>
-                    <div class="news_inner_area">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="twitter_area wow fadeInLeft animated">
-                                    <div class="w_title">
-                                        <h3><i class="fa fa-twitter"></i>Twitter</h3>
-                                    </div>
-                                    <ul>
-                                        <li><a href="#">@themexart:</a> Lorem ipsum dolors sit amets consectetur adipicing elit sed do eiusmod tempor incididunt ut labore.</li>
-                                        <li><a href="#">@themexart:</a> Lorem ipsum dolors sit amets consectetur adipicing elit sed do eiusmod tempor incididunt ut labore.</li>
-                                        <li><a href="#">@themexart:</a> Lorem ipsum dolors sit amets consectetur adipicing elit sed do eiusmod tempor incididunt ut labore.</li>
-                                        <li><a href="#">@themexart:</a> Lorem ipsum dolors sit amets consectetur adipicing elit sed do eiusmod tempor incididunt ut labore.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="blog_slider_area wow fadeInUp animated">
-                                    <div class="w_title">
-                                        <h3>Blog</h3>
-                                    </div>
-                                    <div class="blog_slider_inner">
-                                        <div class="item">
-                                            <img src="img/blog/blog-1.jpg" alt="">
-                                            <a href="#"><h3>The Importance of User Experience</h3></a>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis... <a href="#">Read More</a></p>
-                                            <h5>Posted by <a href="http://rocky.obaidul.com">Rocky</a> at 04 Feb, 2017</h5>
-                                        </div>
-                                        <div class="item">
-                                            <img src="img/blog/blog-2.jpg" alt="">
-                                            <a href="#"><h3>The Importance of User Experience</h3></a>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis... <a href="#">Read More</a></p>
-                                            <h5>Posted by <a href="http://rocky.obaidul.com">Rocky</a> at 04 Feb, 2017</h5>
-                                        </div>
-                                        <div class="item">
-                                            <img src="img/blog/blog-3.jpg" alt="">
-                                            <a href="#"><h3>The Importance of User Experience</h3></a>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis... <a href="#">Read More</a></p>
-                                            <h5>Posted by <a href="http://rocky.obaidul.com">Rocky</a> at 04 Feb, 2017</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="instagram_area wow fadeInRight animated">
-                                    <div class="w_title">
-                                        <h3><i class="fa fa-instagram"></i>Instagram</h3>
-                                    </div>
-                                    <ul>
-                                        <li><a href="#"><img src="img/instagram/instagram-1.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-2.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-3.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-4.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-5.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-6.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-7.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-8.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="img/instagram/instagram-9.jpg" alt=""></a></li>
-                                    </ul>
-                                    <a class="follow_btn" href="#"><i class="fa fa-instagram"></i> Follow on Instagram</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
                 <section class="contact_area pad" id="contact">
                     <div class="main_title">
-                        <h2>Contact Us</h2>
+                        <h2>Contact Me</h2>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -448,15 +304,14 @@
                                 <div class="contact_title">
                                     <h3>Contact Info</h3>
                                 </div>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the et majori have suffered alteration in some form, by injected humour, Domised words which don't look even slightly believable. If you are going to use a pas of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>If you are interested in contacting me please do it over email, as that's the best way to get in contact with me! Thanks! </p>
                                 <div class="media">
                                     <div class="media-left">
                                         <i class="fa fa-map-marker"></i>
                                     </div>
                                     <div class="media-body">
                                         <h4>Address</h4>
-                                        <p>Freedom Way, Jersey City, NJ 07305, USA</p>
+                                        <p>238 College St Burlington, Vermont</p>
                                     </div>
                                 </div>
                                 <div class="media">
@@ -465,7 +320,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Skype</h4>
-                                        <p>sumon.backpiper</p>
+                                        <p>ben.hazzard</p>
                                     </div>
                                 </div>
                                 <div class="media">
@@ -474,7 +329,8 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Email</h4>
-                                        <p>backpiper.com@gmail.com</p>
+                                        <p>bphazzard20@gmail.com</p>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -518,8 +374,8 @@
                 </section>
                 <!--================Map Area =================-->
                 <div id="mapBox" class="mapBox row m0" 
-                data-lat="37.3818288" 
-                data-lon="-122.0658212" 
+                data-lat="44.474889" 
+                data-lon="-73.212929" 
                 data-zoom="13"></div>
                 <!--================End Map Area =================-->
             </div>
@@ -558,9 +414,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <li class="active"><a href="#">ABOUT ME </a></li>
                             <li><a href="#">Skill</a></li>
                             <li><a href="#">Education</a></li>
-                            <li><a href="#">SERVICES</a></li>
                             <li><a href="#">PORTFOLIO</a></li>
-                            <li><a href="#">News</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
                     </div>
