Updated skills and contact info.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <p>While at Plymouth State University I studied Computer Science. I also participated in the Investment club and the on campus marketing association, MAPS (Marketing Association of Plymouth State). While working with MAPS I was awarded, “Most involved freshman". </p>
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="UG">
-                            <h6>2017-2018</h6>
+                            <h6>2017-2020</h6>
                             <a href="#"><h4>Undergraduate Degree</h4></a>
                             <h5>University of Vermont</h5>
                             <p>So far at the University of Vermont I have added a minor in business along with my pursuit of a degree in Computer Science. Off campus I am currently involved with CS Crew and the Entrepreneurship Club.</p>
@@ -264,28 +264,20 @@
                         <h2>Contact Me</h2>
                     </div>
                     <div class="row">
+                        <div class="left_contact_details_overlap">
                         <div class="col-md-6">
                             <div class="left_contact_details wow fadeInUp animated">
                                 <div class="contact_title">
                                     <h3>Contact Info</h3>
                                 </div>
-                                <p>Thanks you for visiting my website!  If you would like to contact me for any reasons at all please reach out to me over email!</p>
-                                <div class="media">
-                                    <div class="media-left">
-                                        <i class="fa fa-map-marker"></i>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4>Address</h4>
-                                        <p>238 College St Burlington, Vermont</p>
-                                    </div>
-                                </div>
+                                <p>Thanks you for visiting my website! If you would like to contact me for any reasons at all please reach out to me by phone or email!</p>
                                 <div class="media">
                                     <div class="media-left">
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="media-body">
-                                        <h4>Skype</h4>
-                                        <p>fx3ben</p>
+                                        <h4>Phone</h4>
+                                        <p>203.802.8314</p>
                                     </div>
                                 </div>
                                 <div class="media">
@@ -299,49 +291,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="contact_from_area wow fadeInUp animated">
-                                <div class="contact_title">
-                                    <h3>Send Message</h3>
-                                </div>
-                                <div class="row">
-                                    <form action="php_email/contact_process.php" method="post" id="contactForm">
-                                        <div class="form-group col-md-12">
-                                            <input type="text" class="form-control" name="name" id="name" placeholder="First Name*">
-                                        </div>
-                                        <div class="form-group col-md-12">
-                                            <input type="text" class="form-control" name="last" id="last" placeholder="Last Name*">
-                                        </div>
-                                        <div class="form-group col-md-12">
-                                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email*">
-                                        </div>
-                                        <div class="form-group col-md-12">
-                                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
-                                        </div>
-                                        <div class="form-group col-md-12">
-                                            <textarea class="form-control" rows="1" id="message" name="message" placeholder="Write Message"></textarea>
-                                        </div>
-                                        <div class="form-group col-md-12">
-                                            <button class="btn btn-default contact_btn" type="submit"><span>Send Massage</span></button>
-                                        </div>
-                                    </form>
-                                    <div id="success">
-                                        <p>Your text message sent successfully!</p>
-                                    </div>
-                                    <div id="error">
-                                        <p>Sorry! Message not sent. Something went wrong!!</p>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </section>
-                <!--================Map Area =================-->
-                <div id="mapBox" class="mapBox row m0" 
-                data-lat="44.476267" 
-                data-lon="-73.213614" 
-                data-zoom="13"></div>
-                <!--================End Map Area =================-->
             </div>
         </div>
                 
